<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <Spinner
        android:id="@+id/field_formation"
        android:entries="@array/formations"
        android:prompt="@string/formation_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/field_niveau"
        android:entries="@array/niveaux"
        android:prompt="@string/niveau_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/field_categorie"
        android:entries="@array/categories"
        android:prompt="@string/categorie_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
